Updated Attribute Null Value Issue Fixed
