# Modules/Statistic/Routes/api.php
@@ -12,3 +12,5 @@ use Illuminate\Http\Request;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
+
+Route::get('statistics/get-dashboard-data', 'DashboardDataController@getDashboardData');
