# storage/api-docs/api-docs.json
@@ -458,6 +458,54 @@
                 }
             }
         },
+        "/api/v1/auth/vendor-register-next": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Customer Register a user to the system Step 2",
+                "description": "Customer Register a user to the system Step 2",
+                "operationId": "customerRegisterNext",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "phone_no": {
+                                        "type": "string",
+                                        "example": "01951233084"
+                                    },
+                                    "otp": {
+                                        "type": "integer",
+                                        "example": "129012"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "12345678"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "example": "12345678"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Create New Customer Account"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/v1/business": {
             "get": {
                 "tags": [
@@ -6397,6 +6445,32 @@
                 "responses": {
                     "200": {
                         "description": "Get Sales List of Business"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/statistics/get-dashboard-data": {
+            "get": {
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "Get Dashboard List",
+                "description": "Get Dashboard List",
+                "operationId": "getDashboardData",
+                "responses": {
+                    "200": {
+                        "description": "Get Dashboard List"
                     },
                     "400": {
                         "description": "Bad request"
